# ASI.Backend

./: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  main.py
asibackend/: README.md  pyproject.toml  requirements.txt
asibackend/conf/base/: catalog.yml
asibackend/data/02_model_input/: model_input_data.csv
asibackend/data/03_models/: trained_model.keras
asibackend/data/04_scalers/: minMaxScaler.pkl  powerTransformer.pkl  scaler.pkl  standardScaler.pkl
asibackend/data/05_encoders/: encoder.pkl
asibackend/notebooks/: test.ipynb
asibackend/src/asiapi/: main.py
asibackend/src/asibackend/: __init__.py  __main__.py  settings.py
asibackend/src/asibackend/pipelines/data_processing/: nodes.py  pipeline.py
asibackend/src/asibackend/pipelines/data_science/: nodes.py  pipeline.py
asifrontend/: README.md  angular.json  package-lock.json  package.json
asifrontend/src/: index.html  main.ts  styles.css
asifrontend/src/app/: ApiService.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  app.routes.ts
asifrontend/src/app/main-page/: ModelFormData.model.ts  main-page.component.css  main-page.component.html  main-page.component.ts
